# neopixel

./: .gitignore  CMakeLists.txt
cmake/: macros.cmake  test_macros.cmake  vhdl_test_macros.cmake
vhdl/: CMakeLists.txt
vhdl/rtl/: CMakeLists.txt  neopixel_top.vhd  neopixel_top_arc.vhd  neopixel_top_ent.vhd
vhdl/rtl/arc/: CMakeLists.txt  neopixel_top_arc.vhd
vhdl/rtl/ent/: CMakeLists.txt
vhdl/sim/: CMakeLists.txt  tb_neopixel_top.vhd  tb_neopixel_top_arc.vhd
vhdl/sim/arc/: CMakeLists.txt  tb_neopixel_top_arc.vhd
vhdl/sim/ent/: CMakeLists.txt  tb_neopixel_top_ent.vhd
vhdl_build/: run.py
vhdl_src/: neopixel_top.vhd
vhdl_uut/: tb_neopixel_top.vhd
